not working, need to replace to nodejs

--- a/serverless/db-management/rds-data/template.yaml
+++ b/serverless/db-management/rds-data/template.yaml
@@ -49,7 +49,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "${ProjectName}-${ApplicationName}"
-      CodeUri: .
+      CodeUri: ./
       Handler: bootstrap
       Runtime: provided.al2023
       Architectures:
