fixing syntax wip

--- a/serverless/web-api/v1/transactions/template.yaml
+++ b/serverless/web-api/v1/transactions/template.yaml
@@ -134,7 +134,7 @@ Resources:
                 #if($category != "")
                 { 
                   "name": "category",
-                  "value" {
+                  "value": {
                     "stringValue": "$category"
                   }
                 },
