adding error handling

--- a/serverless/db-management/rds-data/template.yaml
+++ b/serverless/db-management/rds-data/template.yaml
@@ -30,6 +30,7 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AWSXRayDaemonWriteAccess
       Policies:
         - PolicyName: RdsDataApiAccess
           PolicyDocument:
@@ -65,6 +66,9 @@ Resources:
       MemorySize: 128
       Timeout: 30
       Role: !GetAtt RdsDataExecutionRole.Arn
+      Tracing: Active
+      LoggingConfig:
+        LogFormat: JSON
       Environment:
         Variables:
           LOG_LEVEL: INFO
