--- a/serverless/db-management/rds-data/package.json
+++ b/serverless/db-management/rds-data/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "xo": "^1.2.2"
   }
 }
